--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .navbar {
   display: flex;
   height: 60px;
-  background-color: #0f1111;
+  background-color: #1c3535;
   color: white;
   align-items: center;
   justify-content: space-evenly;
@@ -19,7 +19,7 @@
 }
 
 .logo {
-  background-image: url("/images/amazon_logo.jpg");
+  background-image: url("/amazon_logo.png");
   background-size: cover;
   height: 50px;
   width: 100%;
@@ -56,13 +56,15 @@
   justify-content: space-evenly;
   background-color: yellow;
   width: 620px;
-  height: 40px;
+  height: 30px;
   border-radius: 4px;
 }
 
-.nav-search:hover {
-  border: 2px solid orange;
+  .nav-search:hover {
+  border: 2px solid rgb(36, 29, 16);
 }
+
+
 
 .search-select {
   background-color: #f3f3f3;
@@ -195,6 +197,11 @@ span {
   color: #007185;
   margin: 10px;
   cursor: pointer;
+}
+
+.toop{
+  font-size: 20px;
+  color: white;
 }
 
 /* footer */
